force-app/main/default/objects/Retirada_rapida__c/Retirada_rapida__c.object-meta.xml
<CustomObject>
    <label>Retirada rápida</label>
    <nameField>
        <displayFormat>RET-{0000}</displayFormat>
        <label>Retirada rápida</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retiradas rapidas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>