force-app/main/default/objects/Retirada_rapida__c/fields/AssinaturaTermino__c.field-meta.xml
<CustomField>
    <fullName>AssinaturaTermino__c</fullName>
    <label>assinaturaTermino</label>
    <type>Url</type>
</CustomField>