force-app/main/default/objects/Retirada_rapida__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Selecione um contato que pertence a conta desejada.</inlineHelpText>
    <label>Contato</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Conta__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Retiradas rapidas</relationshipLabel>
    <relationshipName>Retiradas_rapidas</relationshipName>
    <type>Lookup</type>
</CustomField>