force-app/main/default/objects/Retirada_rapida__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Retiradas rapidas</relationshipLabel>
    <relationshipName>Retiradas_rapidas</relationshipName>
    <type>Lookup</type>
</CustomField>